# wing

./: .gitignore  .wing  Cargo.toml  README.md  wing.json
bench/: Cargo.toml  results.txt
bench/src/: main.rs
content/: index.md
docs/: .wing
docs/content/: index.md
docs/site/: index.html
docs/templates/: index.hbs  index.html
site/: index.html
src/: lib.rs  main.rs  utils.rs
src/new/: mod.rs  new.rs
src/serve/: mod.rs  serve.rs
src/static/: new.html  not_found.html
src/watch/: mod.rs  watch.rs
src/wing_preen/: Cargo.toml
templates/: index.hbs
