[package]
name = "wing_generate"
version = "0.0.1"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/wing"
repository = "https://github.com/EthanJustice/wing"
license = "MIT"
publish = false

[dependencies]
# cli
clap = { version = "~2.33.2", features = ["suggestions"] }
crossterm = "~0.17.7"

# (de)serialisation
serde = { version = "~1.0.115", features = ["derive"] }
serde_json = "~1.0.57"

# markdown + templating
handlebars = { version = "= 3.3.0", features = ["script_helper"] }
comrak = "~0.8.2"

# fs
walkdir = "~2.3.1"

# concurrency
rayon = "~1.4.1"