[package]
name = "wing_preen"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/EthanJustice/wing"
repository = "https://github.com/EthanJustice/wing"
license = "MIT"
publish = false

[dependencies]
reqwest = "~0.10.7"